tests/ui/decode-borrow-endpoint-alias.stderr
error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/decode-borrow-endpoint-alias.rs:35:22
   |
33 |     let branch = futures::executor::block_on(endpoint.offer()).unwrap();
   |                                              -------- first mutable borrow occurs here
34 |     let payload = futures::executor::block_on(branch.decode::<g::Msg<7, FramePayload>>()).unwrap();
35 |     let next_offer = endpoint.offer();
   |                      ^^^^^^^^ second mutable borrow occurs here
36 |     core::hint::black_box(&next_offer);
37 |     core::hint::black_box(&payload);
   |                           -------- first borrow later used here
